<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Damage Detection App</string>
    <string name="irise" translatable="false">iRise</string>
    <string name="dmg_app">Damage Detection App</string>
    <string name="login">Login</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="email" translatable="false">Email</string>
    <string name="icon_email" translatable="false">icon email</string>
    <string name="password">Password</string>
    <string name="icon_password" translatable="false">icon_password</string>
    <string name="dont_have">Don\'t have an account yet? ·</string>
    <string name="register_now">Register now!</string>
    <string name="have_an_account">Already have an account?</string>
    <string name="register">Register</string>
    <string name="upload">Upload</string>
    <string name="profile">Profile</string>
    <string name="explore">Explore</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="tap">Tap to Select Image</string>
    <string name="result">Result will be displayed here</string>
    <string name="username" translatable="false">Username</string>
    <string name="location">Location</string>
    <string name="image">image</string>
    <string name="time">Time</string>
    <string name="none">Damage: Little or None</string>
    <string name="mild">Damage: Mild</string>
    <string name="severe">Damage: Severe</string>
    <string name="select_from_gallery">Select from gallery</string>
    <string name="open_camera">Open Camera</string>
    <string name="select_image_first">Select an image first</string>
    <string name="splash" translatable="false">splash</string>
    <string name="fill">Please fill this column first</string>
    <string name="register_failed">Registration failed, please try again later</string>
    <string name="register_success">Registration success</string>
    <string name="login_failed">Login failed</string>
    <string name="login_success">Login success</string>
    <string name="name">Name</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="exit">Exit From Application</string>
</resources>