<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity"
    tools:targetApi="jelly_bean">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/blue_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="70dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/irise"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="120dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/dmg_app"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_regular"
            android:textColor="#888"
            android:text="@string/register_now" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/blue_border_rounded_cornwe">

            <EditText
                android:id="@+id/input_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/iv_email"
                android:autofillHints="Auto Fill"
                android:background="@android:color/transparent"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/email"
                android:importantForAutofill="yes"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingVertical="12dp"
                android:paddingStart="15dp"
                android:textColorHint="@android:color/darker_gray"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:id="@+id/iv_email"
                android:layout_width="25dp"
                android:layout_height="15dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/icon_email"
                android:src="@drawable/email" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/blue_border_rounded_cornwe">

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/iv_password"
                android:autofillHints="Auto Fill"
                android:background="@android:color/transparent"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingVertical="12dp"
                android:paddingStart="15dp"
                android:textColorHint="@android:color/darker_gray"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:id="@+id/iv_password"
                android:layout_width="25dp"
                android:layout_height="15dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/icon_password"
                android:src="@drawable/password" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/blue_fill__rounded_color"
            android:focusable="true"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginVertical="30dp">

            <TextView
                android:id="@+id/tv_account"
                android:layout_width="wrap_content"
                android:textSize="14sp"
                android:layout_height="wrap_content"
                android:textColor="#888"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/have_an_account" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="14sp"
                android:text="@string/login_to_your_account"
                android:paddingStart="5dp"
                android:textStyle="bold"
                android:textColor="@android:color/holo_blue_dark"
                android:fontFamily="@font/poppins_regular"
                android:layout_toEndOf="@+id/tv_account"
                tools:ignore="RtlSymmetry" />
        </RelativeLayout>

    </LinearLayout>
</ScrollView>