<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.camera.CameraFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/label"
            android:fontFamily="@font/poppins_regular"
            android:textSize="20sp"
            android:text="@string/result"
            android:textColor="?attr/colorOnPrimary"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginHorizontal="24dp"
            app:srcCompat="@drawable/ic_baseline_camera_alt_24"
            android:contentDescription="@string/tap" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp">

            <Button
                android:id="@+id/btn_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:background="@drawable/cursor_color"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/open_camera"
                android:textColor="@color/white"
                android:textSize="12sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_gallery"
                android:background="@drawable/cursor_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/select_from_gallery"
                android:textSize="12sp"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            tools:progress="40" />

        <Button
            android:id="@+id/button_upload"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginHorizontal="50dp"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:background="@drawable/blue_fill__rounded_color"
            android:layout_height="wrap_content"
            android:text="@string/upload" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>